# plap

./: Cargo.toml  README.md  flake.nix  justfile
core/: Cargo.toml  README.md
core/src/: arg.rs  error.rs  group.rs  lib.rs  parser.rs  runtime.rs
derive/: Cargo.toml
derive/src/: attrs.rs  define_args.rs  lib.rs  macros.rs  parser.rs
macro/: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: args.rs  attrs.rs  define_args.rs  define_args_slim.rs  dyn_parser.rs  lib.rs  util.rs
shared/: Cargo.toml  README.md
shared/src/: arg.rs  ast.rs  error.rs  ext.rs  lib.rs  parser.rs  runtime.rs  util.rs
slim/: Cargo.toml
slim/src/: arg.rs  define_args.rs  parser.rs
slim/tests/: ues_macros.rs
src/: arg.rs  ast.rs  checker.rs  define_args.rs  error.rs  errors.rs  group.rs  id.rs  lib.rs  macros.rs  parser.rs  parser2.rs  runtime.rs  schema.rs  str.rs  tests.rs  util.rs  validate.rs
tests/: define_args.rs  define_args_slim.rs  ues_macros.rs
