[package]
name = "plap"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "An argument parser for proc-macros"
readme = "README.md"
repository = "https://github.com/loichyan/plap"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", default-features = false, features = ["parsing"] }

[dev-dependencies]
trybuild = "1.0"
