[workspace]
members = ["macros"]

[package]
name = "plap"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "An argument parser for proc-macros"
keywords = []
categories = []
repository = "https://github.com/loichyan/plap"

[features]
default = []
checking = []
string = []

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["parsing"] }

[dev-dependencies]
plap-macros = { path = "macros" }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = [
    "extra-traits",
    "full",
    "parsing",
] }
trybuild = "1.0"
