[package]
name = "plap-macro"
version = "0.0.0"
license = "MIT OR Apache-2.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "Macro implementation of the plap crate."
readme = "README.md"
repository = "https://github.com/loichyan/plap"

[lib]
proc-macro = true

[dependencies]
plap-shared = { version = "=0.0.0", path = "../shared" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
