[package]
name = "plap-slim"
version = "0.0.0"
publish = false
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

description = "A lightweight and sensible argument parser for proc-macros"
keywords = []
categories = []
repository = "https://github.com/loichyan/plap"

[features]
default = []
string = []

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["parsing"] }
